# BD

./: CMakeLists.txt  DataBaseHandler.cpp  DataBaseHandler.h  Lab6.cpp  SuggestionLineEdit.cpp  SuggestionLineEdit.h  SuggestionWidget.cpp  SuggestionWidget.h  main.cpp  mainwindow.cpp  mainwindow.h
Lab7/: DataBaseManager.cpp  DataBaseManager.h  mainwindow.cpp  mainwindow.h
libpqxx-7.9.2/: BUILDING-cmake.md  BUILDING-configure.md  NEWS
libpqxx-7.9.2/config/m4/: libtool.m4
libpqxx-7.9.2/include/pqxx/: nontransaction.hxx  stream_from.hxx
libpqxx-7.9.2/test/: test01.cxx
